<resources>
    <string name="app_name">JymStar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="enter_username_or_email">Enter username or email</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_pin_code">Sign in with Pin Code</string>
    <string name="signup"><u>SIGN UP</u></string>
    <string name="get_started">Get Started</string>
    <string name="enter_your_details_to_register">Enter your details to register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="enter_your_email">Enter your email</string>
    <string name="use_phone_number_instead"><u>Use phone number instead</u></string>
    <string name="a_verification_code_will_be_sent_to_set_or_reset_your_password">A verification code will be sent to set or reset your password</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="con_tinue">Continue</string>
    <string name="home">Home</string>
    <string name="statistics">Statistics</string>
    <string name="events">Events</string>
    <string name="quick_access">Quick Access</string>
    <string name="task_scheduling">Task Scheduling</string>
    <string name="cases">Cases</string>
    <string name="billing">Billing</string>
    <string name="open_a_case">Open a Case</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="next">Next</string>
    <string name="court_level">Court Level</string>
    <string name="closed">Closed</string>
    <string name="pending">Pending</string>
    <string name="hourly">Hourly</string>
    <string name="billing_method">Billing Method</string>
    <string name="billable_namount">Billable\nAmount</string>
    <string name="total_npayment">Total\nPayment</string>
    <string name="event_details">Event Details</string>
    <string name="enter_event_name">Enter Event Name</string>
    <string name="event_title">Event Title</string>
    <string name="event_date_and_time">Event Date and Time</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="details">Details : </string>
    <string name="calculate">Calculate</string>
    <string name="submit">Submit</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enteryourname">Enter your name</string>
    <string name="entervalidemail">Enter a valid email</string>
    <string name="passwordsdontmatch">Passwords do not match</string>
    <string name="name">Name</string>
    <string name="code">Code</string>
    <string name="entercode">Enter your code</string>
    <string name="share_code">Share code</string>
    <string name="share_qr_code">Share QR Code</string>
    <string name="exerciseselected">\" exercise(s) selected\"</string>
    <string name="myexercise">My Exercises</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="enter_sets">Enter Sets</string>
    <string name="save_exercise">Save Exercise</string>
    <string name="rest">Rest</string>
    <string name="reps">Reps</string>
    <string name="set">Set</string>
</resources>