<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Login">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/guideline1"
        app:layout_constraintGuide_percent="0.1"/>

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textAlignment="center"
            android:id="@+id/txtTopic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />
    </androidx.appcompat.widget.Toolbar>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/guideline2"
        app:layout_constraintGuide_percent="0.9"/>

    <ScrollView
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/guideline1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:src="@drawable/logo1"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/imgPic"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInp1"
                android:layout_marginTop="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:layout_constraintTop_toBottomOf="@id/imgPic"
                android:layout_width="match_parent"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                android:textColorHint="@color/white"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:inputType="textEmailAddress"
                    android:id="@+id/edtEmail"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:hint="@string/enter_username_or_email" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/txtInp1"
                app:passwordToggleEnabled="true"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                android:textColorHint="@color/white"
                app:passwordToggleTint="@color/white"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password"
                    android:id="@+id/edtPassword"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:id="@+id/txtForgotPassowrd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

            <Button
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnLogin"
                app:layout_constraintTop_toBottomOf="@id/txtForgotPassowrd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                android:text="@string/sign_in"/>


            <TextView
                android:id="@+id/txtDontHave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/primary"
                android:text="Don't have an account?  "
                app:layout_constraintEnd_toStartOf="@+id/txtSignUp"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

            <TextView

                android:id="@+id/txtSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="100dp"
                android:text="@string/signup"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <ProgressBar
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:elevation="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>